# transformers

./: README.md  pyproject.toml
Bigram_to_Transformer/: 1_bigrams.ipynb  2_MLP.ipynb  3.1_initMLP.ipynb  3.2_no_BatchNorm.ipynb  3.2_with_BatchNorm.ipynb  4_backprop.ipynb  5_WaveNet.ipynb  6_nanogpt.ipynb
Bigram_to_Transformer/lecture6/: bigram.py
LoRA_finetuning/: preprocess.ipynb
MoE/: moe.ipynb
