[tool.poetry]
authors = [
  "Maksym Sevkovych <m.sevkovych@web.de>",
]
description = "Karpathy's intro to transformers"
name = "transformer_tutorial"
version = "0.0.0"

[tool.ruff]
# Ignored rules:
#   "E501" -> line length violation
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 119
exclude = [
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".venv*",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
torch = "^2.1.2"
transformers = "^4.36.2"
datasets = "^2.16.1"
peft = "^0.7.1"
jupyter = "^1.0.0"
evaluate = "^0.4.1"
huggingface = "^0.0.1"
huggingface-hub = "^0.20.2"
lightning = "^2.1.3"


[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "wheel"]